[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/TextButtonWithEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/WhiteBox.png" type="Texture" id=3]
[ext_resource path="res://Images/SessionButton.png" type="Texture" id=4]
[ext_resource path="res://addons/regular_polygon2d_node/RegularPolygon2D.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Components/MenuFooterText.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/MainMenuRedux.gd" type="Script" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.172727 ), 0.0, 0.0, 0, 0, Vector2( 0.996753, 0.0363636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 233, 200.989, 0, 0, 0, 0, 51.2844, 201.098 )
}

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 6
outline_color = Color( 0.223529, 0.745098, 0.752941, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 6
outline_color = Color( 0.223529, 0.745098, 0.752941, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 6
outline_color = Color( 0.223529, 0.745098, 0.752941, 1 )
font_data = ExtResource( 2 )

[node name="MainMenuRedux" type="Node2D"]
script = ExtResource( 7 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
visible = false
modulate = Color( 1, 0.988235, 0.141176, 1 )
position = Vector2( 240, 440 )
amount = 154
lifetime = 3.0
draw_order = 1
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( 360, 360 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 60.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="SetBox" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="SetBox"]
position = Vector2( 233, 200.989 )
rotation = -3.14129
rotate = false

[node name="RotTween" type="Tween" parent="SetBox/PathFollow2D"]

[node name="SetsPolygon" type="Node2D" parent="SetBox/PathFollow2D"]
position = Vector2( 0.977875, -0.307724 )
rotation = -3.14009
script = ExtResource( 5 )
centered = true
size = 200.0
polygon_color = Color( 0.191406, 0.191406, 0.191406, 1 )
border_size = 0.0

[node name="SetsButton" type="TextureButton" parent="SetBox/PathFollow2D/SetsPolygon"]
margin_left = -60.0
margin_top = -75.0
margin_right = 65.0
margin_bottom = 50.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetsText" parent="SetBox/PathFollow2D" instance=ExtResource( 1 )]
margin_left = 40.0
margin_top = 25.0
margin_right = 130.0
margin_bottom = 70.0
rect_rotation = 180.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Sets"
text = "Sets"
fx = "shake"
params = [ "rate=10", "level=10" ]
TICK_LIMIT = 0.05
MAX_OUTLINE = 12
MIN_OUTLINE = 2

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
margin_left = 125.0
margin_top = 330.0
margin_right = 355.0
margin_bottom = 560.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSessionText" parent="." instance=ExtResource( 1 )]
margin_left = 168.0
margin_top = 400.0
margin_right = 318.0
margin_bottom = 490.0
txt = " START\\nSession"
fx = "wave"

[node name="HelpText" parent="." instance=ExtResource( 1 )]
margin_left = 15.0
margin_top = 15.0
margin_right = 105.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_text = "Help"
text = "Help"
txt = "Help"
fx = "wave"
MAX_OUTLINE = 7

[node name="SettingsText" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 307.865
margin_top = 15.0
margin_right = 467.865
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_text = "Settings"
text = "Settings"
fit_content_height = true
txt = "Settings"
fx = "wave"
MAX_OUTLINE = 7

[node name="FooterText" parent="." instance=ExtResource( 6 )]

[node name="VersionText" parent="FooterText/TitleText" index="1"]
bbcode_enabled = true
bbcode_text = "v0.92"
text = "v0.92"

[connection signal="pressed" from="SetBox/PathFollow2D/SetsPolygon/SetsButton" to="." method="_on_SetsButton_pressed"]

[editable path="FooterText"]
